<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ TeleStax, Open Source Cloud Communications
  ~ Copyright 2011-2016, Telestax Inc and individual contributors
  ~ by the @authors tag.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation; either version 3 of
  ~ the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>restcomm.rvd.testsuite</artifactId>
    <groupId>com.telestax.servlet</groupId>
    <version>7.9.0-SNAPSHOT</version>

    <properties>
        <scala-lang.version>2.10.1</scala-lang.version>
        <akka.version>2.1.2</akka.version>
        <guava.version>14.0.1</guava.version>
        <log4j.version>1.2.16</log4j.version>
        <slf4j.version>1.5.5</slf4j.version>
        <commons-configuration.version>1.7</commons-configuration.version>
        <commons-io.version>2.4</commons-io.version>
        <jain.mgcp.version>1.0</jain.mgcp.version>
        <mobicents.mgcp.impl.version>3.0.2.FINAL</mobicents.mgcp.impl.version>
        <javamail.version>1.4</javamail.version>
        <servletapi.version>2.5</servletapi.version>
        <sipservletapi.version>3.1.739</sipservletapi.version>
        <staxapi.version>1.0.1</staxapi.version>
        <staximpl.version>1.2.0</staximpl.version>
        <servlet-api.version>7.0.50</servlet-api.version>
        <shirocore.version>1.2.0</shirocore.version>
        <shiroweb.version>1.2.0</shiroweb.version>
        <jersey.version>1.13</jersey.version>
        <httpclient.version>4.5.2</httpclient.version>
        <gson.version>2.3.1</gson.version>
        <xstream.version>1.4.2</xstream.version>
        <mongodb.version>2.7.2</mongodb.version>
        <mybatis.version>3.2.2</mybatis.version>
        <jodatime.version>2.0</jodatime.version>
        <libphonenumber.version>4.3</libphonenumber.version>
        <junit.version>4.10</junit.version>
        <scalatest.version>1.9.1</scalatest.version>
        <hsqldb.version>2.3.2</hsqldb.version>
        <sip-ri.version>1.2.293</sip-ri.version>
        <arquillian.version>1.0.3.Final</arquillian.version>
        <mss.arquillian.version>1.0.1</mss.arquillian.version>
        <mss.shrinkwrap.version>1.0.2</mss.shrinkwrap.version>
        <shrinkwrap.resolver.version>2.0.0-alpha-4</shrinkwrap.resolver.version>
        <sipunit.version>2.0.1</sipunit.version>
        <!--tomcat.version>6.0.35</tomcat.version -->
        <tomcat7.version>7.0.64</tomcat7.version>
        <mobicents.checkstyle.version>1.0.0.FINAL</mobicents.checkstyle.version>
        <checkstyle.plugin.version>2.9.1</checkstyle.plugin.version>
        <mgcpunit.version>1.0.0-ALPHA2</mgcpunit.version>
        <aws.sdk.version>1.9.24</aws.sdk.version>
        <!-- SMPP Testing -->
        <ch.smpp.version>5.0.8</ch.smpp.version>
        <ch-commons-util.version>6.0.2</ch-commons-util.version>
        <ch.commons.gsm.version>3.0.0</ch.commons.gsm.version>
        <ch-commons-charset.version>3.0.2</ch-commons-charset.version>
        <netty.version>3.9.6.Final</netty.version>
        <logback.version>1.1.3</logback.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${log4j.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-server</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-client</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <scope>test</scope>
            <version>${gson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jboss.arquillian.container</groupId>
            <artifactId>arquillian-tomcat-embedded-7</artifactId>
            <version>1.0.0.CR7</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <scope>test</scope>
            <version>${commons-io.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-coyote</artifactId>
            <version>${tomcat7.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-jasper</artifactId>
            <version>${tomcat7.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock</artifactId>
            <version>1.57</version>
            <!-- Include this if you have dependency conflicts for Guava, Jetty, Jackson
                or Apache HTTP Client -->
            <classifier>standalone</classifier>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-catalina</artifactId>
            <version>${tomcat7.version}</version>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
            <version>3.0.1</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <version>${arquillian.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
            <version>${shrinkwrap.resolver.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
            <version>${shrinkwrap.resolver.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArguments>
                        <g />
                    </compilerArguments>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <useProjectReferences>false</useProjectReferences>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.19.1</version>
                    <configuration>
                        <argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
                        <!-- <excludes> <exclude>**/SmsSessionTest.java</exclude> </excludes> -->
                        <forkCount>1</forkCount>
                        <reuseForks>false</reuseForks>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>mobicents-public-repository-group</id>
            <name>Mobicens Public Maven Repository Group</name>
            <url>https://oss.sonatype.org/content/groups/public</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>jboss-public-repository-group</id>
            <name>JBoss Public Maven Repository Group</name>
            <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>mobicents-public-repository-group</id>
            <name>Mobicens Public Maven Repository Group</name>
            <url>https://oss.sonatype.org/content/groups/public</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>jboss-public-repository-group</id>
            <name>JBoss Public Maven Repository Group</name>
            <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>
